syntax = "proto3";

package inventory;
option go_package = "github.com/Butternut01/ecommerce-platform/inventory-service/proto/inventory";

service InventoryService {
    rpc AddProduct(AddProductRequest) returns (AddProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message AddProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    int32 quantity = 4;
}

message AddProductResponse {
    string id = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 quantity = 5;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 quantity = 5;
}

message UpdateProductResponse {
    string id = 1;
}

message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
    string id = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
    repeated Product products = 1;
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 quantity = 5;
}